blocks/form/src/index.module.css
.root {
  flex-flow: column;
  margin: 0 auto;
  max-width: 480px;
}

.error {
  max-height: 64px;
  overflow: hidden;
  position: sticky;
  top: 64px;
  transition: 150ms;
  z-index: 1;

  &.hidden {
    margin-bottom: 0;
    max-height: 0;
  }
}

.dense :global(.help) {
  min-height: unset;
}

.wrapper {
  display: flex;
  flex-wrap: wrap;
  gap: 0 1.25rem;
}

.wrapper > * {
  flex: 1 100%;
}

